--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.5",
+    "@types/qrcode": "^1.5.6",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
     "next": "14.2.15",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
